--- a/wChar.css
+++ b/wChar.css
@@ -1,50 +1,39 @@
-/*** layout/positioning - stuff you probably won't need to change ***/
-._wChar_holder{display:none; position:absolute; z-index: 99999;}
-._wChar_outer{position:relative;}
-._wChar_inner{position: static;}
-._wChar_bg{position:absolute; left:0px; top:0px; width:100%; height:100%;}
-._wChar_content{position:relative;}
-
-/*** visuals ***/
-._wChar_holder{border-width:1px; border-style:solid; }/*outer border*/
-._wChar_outer{border-width:0px; border-style:solid; margin:1px;  }/*inner border*/
-._wChar_content{padding:3px 10px; font-family:verdana; font-size:10px; text-align:center;}/*content*/
-
-/*** colors ***/
-._wChar_minCount{}
-
-._wChar_red, ._wChar_red ._wChar_outer{border-color:#CE6F6F;}
-._wChar_red ._wChar_bg{background-color:#F79992;}
-._wChar_red ._wChar_inner{color:#9C2F2F;}
-
-._wChar_green, ._wChar_green ._wChar_outer{border-color:#A9DB66;}
-._wChar_green ._wChar_bg{background-color:#CDE6AC;}
-._wChar_green ._wChar_inner{color:#58792E;}
-
-._wChar_blue, ._wChar_blue ._wChar_outer{border-color:#ADD9ED;}
-._wChar_blue ._wChar_bg{background-color:#E5F6FE;}
-._wChar_blue ._wChar_inner{color:#4D9FBF;}
-
-._wChar_white, ._wChar_white ._wChar_outer{border-color:#E2E2E2;}
-._wChar_white ._wChar_bg{ background-color:#FFFFFF;}
-._wChar_white ._wChar_inner{color:#454545;}
-
-._wChar_black, ._wChar_black ._wChar_outer{border-color:#303030;}
-._wChar_black ._wChar_bg{background-color:#505050;}
-._wChar_black ._wChar_inner{color:#F3F3F3;}
-
-._wChar_cream, ._wChar_cream ._wChar_outer{border-color:#F9E98E;}
-._wChar_cream ._wChar_bg{background-color:#FBF7AA;}
-._wChar_cream ._wChar_inner{color: #A27D35;}
-
-._wChar_yellow, ._wChar_yellow ._wChar_outer{border-color:#E9D315;}
-._wChar_yellow ._wChar_bg{background-color:#F9F2BA;}
-._wChar_yellow ._wChar_inner{color:#5B5316;}
-
-._wChar_orange, ._wChar_orange ._wChar_outer{border-color:#E56717;}
-._wChar_orange ._wChar_bg{background-color:#F87217;}
-._wChar_orange ._wChar_inner{color:#9C2F2F;}
-
-._wChar_plum, ._wChar_plum ._wChar_outer{border-color:#7E354D;}
-._wChar_plum ._wChar_bg{background-color:#B93B8F;}
-._wChar_plum ._wChar_inner{color:#F9B7FF;}
+/***********************************
+ * Layout
+ ***********************************/
+.wChar {
+    position: absolute;
+    z-index: 50;
+}
+/***********************************
+ * Theme - classic
+ ***********************************/
+.wChar-theme-classic.wChar {
+    width: 50px;
+    height: 25px;
+    line-height: 25px;
+    margin: 2px;
+    border: solid #99aaff 1px;
+    color: #99aaff;
+    border-radius: 5px;
+    text-align: center;
+    background-repeat: repeat-x;
+    background-color: #fff;
+    background-image: -moz-linear-gradient(top, #fff, #ececec);
+    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#fff), to(#ececec));
+    background-image: -webkit-linear-gradient(top, #fff, #ececec);
+    background-image: -o-linear-gradient(top, #fff, #ececec);
+    background-image: linear-gradient(to bottom, #fff, #ececec);
+    -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
+    -moz-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
+    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
+}
+.wChar-theme-classic.wChar-min {
+    border-color: #ffaaff;
+    color: #ffaaff;
+    background-image: -moz-linear-gradient(top, #fff, #ffddff);
+    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#fff), to(#ffddff));
+    background-image: -webkit-linear-gradient(top, #fff, #ffddff);
+    background-image: -o-linear-gradient(top, #fff, #ffddff);
+    background-image: linear-gradient(to bottom, #fff, #ffddff);
+}
