--- a/assets/demo.css
+++ b/assets/demo.css
@@ -80,11 +80,8 @@ header {
     margin-right: 2px;
     width: 16px;
     height: 16px;
-    overflow: hidden;
+    cursor: pointer;
     background-image: url('./img/addthis-github.png');
-}
-#github-button iframe{
-    opacity: 0;
 }
 #addthis-toolbox {
     position: absolute;
